--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JoviPlanet - Encontre o imóvel ideal para viver ou investir</title>
-    <meta name="description" content="Casas, apartamentos e terrenos em diversos países. Imóveis verificados, compra segura e atendimento personalizado." />
+    <meta name="description" content="Casas, apartamentos e terrenos em diversos países. Propriedades autenticadas, segurança em cada etapa e atendimento pessoal." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
